Fixed issue with navbar when page was too small where it would block input textboxes. Messed with z-index to fix

--- a/alongtheway-frontend/src/app/app.component.css
+++ b/alongtheway-frontend/src/app/app.component.css
@@ -37,7 +37,7 @@
   flex-basis: auto;
   text-align: left;
   width: 250px;
-
+  z-index: 1;
   font: 20px Roboto, "Helvetica Neue", sans-serif;
 }
 
